# models/db_models/account_model.go
@@ -1,12 +1,17 @@
 package models
 
 import (
-	"gorm.io/gorm"
+	"time"
 )
 
+
+// @Description Account model
 type Account struct {
-	gorm.Model
-	UserName string `json:"userName"`
+	ID        uint       `json:"id"`
+    CreatedAt time.Time  `json:"created_at"`
+    UpdatedAt time.Time  `json:"updated_at"`
+    DeletedAt *time.Time `json:"deleted_at,omitempty"`
+	UserName string `gorm:"unique" json:"username"`
 	Password string `json:"password"`
 	Email    string `json:"email"`
 	Phone    string `json:"phone"`
