# models/request_models/register_request.go
@@ -1,0 +1,10 @@
+package request_models
+
+import ()
+
+type RegisterRequest struct {
+	UserName string `json:"username" binding:"required"`
+	Password string `json:"password" binding:"required"`
+	Email    string `json:"email" binding:"required"`
+	Phone    string `json:"phone" binding:"required"`
+}
